--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "nickName": "tresette-gameserver",
-  "version": "0.0.0",
+  "nickName": "1o1-gameserver",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node index.js"
